--- a/styles-local.html
+++ b/styles-local.html
@@ -9,7 +9,7 @@ table.opera {
 
 table.opera th {
 	text-align: left;
-	background: skyblue;
+	background: lightblue;
 	position: sticky;
 	padding-left: 3px;
 	padding-right: 3px;
@@ -51,7 +51,7 @@ input, select {
 	font-size: 1.10rem;
 	margin: 3px;
 	padding: 5px;
-	background: skyblue;
+	background: lightblue;
 }
 
 input::placeholder {
@@ -65,7 +65,7 @@ option.rest {
 }
 
 option.first {
-	background: skyblue;
+	background: lightblue;
 	color: black;
 }
 
