--- a/styles-local.html
+++ b/styles-local.html
@@ -7,6 +7,7 @@ table.opera {
 	font-family: Tahoma;
 }
 
+
 table.opera th {
 	text-align: left;
 	background: lightblue;
@@ -17,6 +18,7 @@ table.opera th {
 	cursor: pointer;
 }
 
+
 table.opera td {
 	padding-right: 3px;
 	padding-left: 3px;
@@ -24,26 +26,32 @@ table.opera td {
 	vertical-align: baseline;
 }
 
+
 table.opera td.nobreak { 
 	white-space: pre;
 
 }
 
+
 table.opera tr:hover {
 	background: #ff000011;
 }
+
 
 table.opera td.period {
 	text-align: center;
 }
 
+
 table.opera th.work-title, table.opera td.work-title {
 	min-width: 200px;
 }
 
+
 table.opera th.dedicatee, table.opera td.dedicatee {
 	min-width: 200px;
 }
+
 
 input, select {
 	border: 1px solid #ddd;
@@ -54,20 +62,33 @@ input, select {
 	background: lightblue;
 }
 
+.nobreak {
+	white-space: nowrap;
+}
+
+select.active {
+	color: white;
+	background: navy;
+}
+
+
 input::placeholder {
 	font-style: italic;
 	color: white;
 }
+
 
 option.rest {
 	background: navy;
 	color: white;
 }
 
+
 option.first {
 	background: lightblue;
 	color: black;
 }
+
 
 input:focus,
 select:focus,
@@ -76,15 +97,18 @@ button:focus {
 	outline: none;
 }
 
+
 #search-fields {
 	margin: 10px;
 	padding: 10px;
 	border: 3px solid #999;
 }
 
+
 #search-count {
 	font-size: 1.5rem;
 }
+
 
 .button {
 	font-family: Tahoma;
@@ -96,11 +120,25 @@ button:focus {
 	padding: 7px;
 }
 
+
 .button:hover {
 	background: red;
 	color: black;
 	cursor: pointer;
 }
 
+
+#documentation {
+	padding-left: 14px;
+	font-size: 1.25rem;
+}
+
+a {
+	text-decoration: none;
+}
+
+
 </style>
+
+
 
