Fix height of search box.

--- a/styles-local.html
+++ b/styles-local.html
@@ -1,6 +1,12 @@
 
 <style>
 
+
+#search-fields {
+	min-height: 118.5px;
+}
+
+
 table.opera {
 	margin-top: 50px;
 	border-collapse: collapse;
@@ -133,9 +139,11 @@ button:focus {
 	font-size: 1.25rem;
 }
 
+
 a {
 	text-decoration: none;
 }
+
 
 .text-box {
 	width: 100px;
